@@ -427,6 +427,8 @@ public:
   zstring infinity;
   zstring NaN;
   zstring minus;
+  
+  zstring pictureString; // The original picture string, used for debugging and error reporting
 
   class PartInfo
   {
@@ -500,14 +502,14 @@ public:
 
 
 // returns an error if there are two or more instances of the given pattern in the string
-static void errorIfTwoOrMore(zstring const& part, const char* sep, QueryLoc& loc)
+static void errorIfTwoOrMore(zstring const& part, const char* sep, FormatNumberInfo& info)
 {
   zstring::size_type const pos = part.find(sep);
 
   if (pos != zstring::npos)
   {
     if (part.find(sep, strlen(sep), pos+1) != zstring::npos)
-      throw XQUERY_EXCEPTION(err::XTDE1310, ERROR_LOC(loc));
+      throw XQUERY_EXCEPTION(err::FODF1310, ERROR_PARAMS(info.pictureString, ZED(FormatNumberDuplicates), sep), ERROR_LOC(info.loc));
   }
 }
 
@@ -521,19 +523,19 @@ static void parsePart(
   if (str.empty())
     return;
 
-  errorIfTwoOrMore(str, info.percent.c_str(), info.loc);
-  errorIfTwoOrMore(str, info.per_mille.c_str(), info.loc);
+  errorIfTwoOrMore(str, info.percent.c_str(), info);
+  errorIfTwoOrMore(str, info.per_mille.c_str(), info);
 
   if (str.find(info.percent.c_str()) != zstring::npos &&
       str.find(info.per_mille.c_str()) != zstring::npos)
   {
-    throw XQUERY_EXCEPTION(err::XTDE1310, ERROR_LOC(info.loc));
+    throw XQUERY_EXCEPTION(err::FODF1310, ERROR_PARAMS(info.pictureString, ZED(FormatNumberPercentPermille)), ERROR_LOC(info.loc));
   }
 
   if (str.find(info.digit_sign.c_str()) == zstring::npos &&
       str.find(info.zero_digit.c_str()) == zstring::npos)
   {
-    throw XQUERY_EXCEPTION(err::XTDE1310, ERROR_LOC(info.loc));
+    throw XQUERY_EXCEPTION(err::FODF1310, ERROR_PARAMS(info.pictureString, ZED(FormatNumberAtLeastOneOptionalOrDecimal)), ERROR_LOC(info.loc));
   }
 
   // get grouping separators
@@ -563,15 +565,16 @@ static void parsePart(
     start += delta;
   }
 
-  if (first_digit_sign != -1 && last_zero_sign != -1
-      &&
-      ((!fractional && first_digit_sign > last_zero_sign)
-        ||
-        (fractional && first_digit_sign < last_zero_sign)))
-    throw XQUERY_EXCEPTION(err::XTDE1310, ERROR_LOC(info.loc));
+  if (first_digit_sign != -1 && last_zero_sign != -1)
+  {
+    if (!fractional && first_digit_sign > last_zero_sign)
+      throw XQUERY_EXCEPTION(err::FODF1310, ERROR_PARAMS(info.pictureString, ZED(FormatNumberIntegerPart)), ERROR_LOC(info.loc));    
+    else if (fractional && first_digit_sign < last_zero_sign)
+      throw XQUERY_EXCEPTION(err::FODF1310, ERROR_PARAMS(info.pictureString, ZED(FormatNumberFractionalPart)), ERROR_LOC(info.loc));
+  }
 
   if (part.grouping_pos.size() > 0 && part.grouping_pos[0] == 0)
-    throw XQUERY_EXCEPTION(err::XTDE1310, ERROR_LOC(info.loc));
+    throw XQUERY_EXCEPTION(err::FODF1310, ERROR_PARAMS(info.pictureString, ZED(FormatNumberGroupingAdjacentToDecimal)), ERROR_LOC(info.loc));
 
   if (part.grouping_pos.size() > 0)
   {
@@ -606,7 +609,7 @@ static void parseSubpicture(
   if (str.empty())
     return;
 
-  errorIfTwoOrMore(str, info.decimal_separator.c_str(), info.loc);
+  errorIfTwoOrMore(str, info.decimal_separator.c_str(), info);
   zstring::size_type pos = str.find(info.decimal_separator.c_str());
   if (pos != zstring::npos)
   {
@@ -648,18 +651,18 @@ static void parseSubpicture(
 }
 
 
-static void parsePicture(zstring& picture, FormatNumberInfo& info)
+static void parsePicture(FormatNumberInfo& info)
 {
-  errorIfTwoOrMore(picture, info.pattern_separator.c_str(), info.loc);
+  errorIfTwoOrMore(info.pictureString, info.pattern_separator.c_str(), info);
 
-  zstring::size_type pos = picture.find(info.pattern_separator.c_str());
+  zstring::size_type pos = info.pictureString.find(info.pattern_separator.c_str());
   if (pos != zstring::npos)
   {
-    info.pos_subpicture.str = picture.substr(0, pos);
-    info.neg_subpicture.str = picture.substr(pos+1, picture.size() - pos);
+    info.pos_subpicture.str = info.pictureString.substr(0, pos);
+    info.neg_subpicture.str = info.pictureString.substr(pos+1, info.pictureString.size() - pos);
   }
   else
-    info.pos_subpicture.str = picture;
+    info.pos_subpicture.str = info.pictureString;
 
   parseSubpicture(info.pos_subpicture, info);
   if (info.neg_subpicture.str.empty())
@@ -862,7 +865,6 @@ bool
 FormatNumberIterator::nextImpl(store::Item_t& result, PlanState& planState) const
 {
   zstring resultString;
-  zstring pictureString;
   store::Item_t numberItem, pictureItem, formatName;
   FormatNumberInfo info;
   DecimalFormat_t df_t;
@@ -945,8 +947,8 @@ FormatNumberIterator::nextImpl(store::Item_t& result, PlanState& planState) cons
 
     info.readFormat(df_t);
 
-    pictureString = pictureItem->getStringValue();
-    parsePicture(pictureString, info);
+    info.pictureString = pictureItem->getStringValue();
+    parsePicture(info);
     formatNumber(resultString, result, info, theSctx->get_typemanager(), loc);
 
     STACK_PUSH (GENV_ITEMFACTORY->createString(result, resultString), state);
